--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "loan-manager",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "build": "tsc",
-    "start": "tsc && nodemon ./dist/index.js",
+    "start": "nodemon ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -25,6 +25,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.0.1",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
 }
