Added token model, basic token api, implemented tokens into login request

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,6 +3,7 @@
       "target": "ES6",
       "esModuleInterop": true,
       "outDir": "dist",
-      "baseUrl": "."
+      "baseUrl": "./",
+      "moduleResolution": "node"
     }
 }
