--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.13",
     "async-jsonwebtoken": "^1.0.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.0.1",
     "ts-node": "^10.7.0",
